--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "vendor/pugixml"]
 	path = vendor/pugixml
-	url = https://github.com/zeux/pugixml.git
+	url = https://github.com.cnpmjs.org/zeux/pugixml.git
 [submodule "vendor/gsl-lite"]
 	path = vendor/gsl-lite
-	url = https://github.com/martinmoene/gsl-lite.git
+	url = https://github.com.cnpmjs.org/martinmoene/gsl-lite.git
 [submodule "vendor/xtensor"]
 	path = vendor/xtensor
-	url = https://github.com/xtensor-stack/xtensor.git
+	url = https://github.com.cnpmjs.org/xtensor-stack/xtensor.git
 [submodule "vendor/xtl"]
 	path = vendor/xtl
-	url = https://github.com/xtensor-stack/xtl.git
+	url = https://github.com.cnpmjs.org/xtensor-stack/xtl.git
 [submodule "vendor/fmt"]
 	path = vendor/fmt
-	url = https://github.com/fmtlib/fmt.git
+	url = https://github.com.cnpmjs.org/fmtlib/fmt.git
